netpol/deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: default
  name: iris
spec:
  ingress: []
  podSelector: {}
