netpol/deny-app.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: default
  name: iris-v2
spec:
  ingress: []
  podSelector: 
    matchLabels:
      app: postgresql
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: no-app-egress
spec:
  podSelector:
    matchLabels:
      app: klustered
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector: {}
